# tg-lora-public

./: .dockerignore  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  Makefile  PURPOSE.md  README.md  SYSTEM_CONSTITUTION.md  docker-compose.yml  pyproject.toml
baselines/: velocity_ops.json
configs/: 9b_baseline.yaml  9b_baseline_suffix_only_last25.yaml  9b_baseline_with_prefix_cache.yaml  9b_tg_lora.yaml  9b_tg_lora_accel_aggressive.yaml  9b_tg_lora_accel_balanced.yaml  9b_tg_lora_accel_conservative.yaml  9b_tg_lora_accel_no_accel.yaml  9b_tg_lora_adaptive_k5.yaml  9b_tg_lora_adaptive_k5_no_conv.yaml  9b_tg_lora_cosine_n_persistent.yaml  9b_tg_lora_cosine_n_skip_persistent.yaml  9b_tg_lora_fixed_n_persistent.yaml  9b_tg_lora_m10_dynfreeze.yaml  9b_tg_lora_m10_dynfreeze_baseline.yaml  9b_tg_lora_m9.yaml  9b_tg_lora_m9_dense_ckpt.yaml  9b_tg_lora_optimizer_reuse_experimental.yaml  9b_tg_lora_paper_poc.yaml  9b_tg_lora_prefix_feature_cache_async.yaml  9b_tg_lora_prefix_feature_cache_experimental.yaml  9b_tg_lora_prefix_feature_cache_one_shot_poc.yaml  9b_tg_lora_prefix_feature_cache_paper_poc.yaml  9b_tg_lora_psa.yaml  9b_tg_lora_suffix_only_no_cache.yaml  jsonex_lawa.yaml  jsonex_plain.yaml  jsonex_psa.yaml  measure_accum1.yaml  measure_accum16.yaml  measure_accum4.yaml  mlx_35b_baseline.yaml  mlx_9b_jsonex_baseline.yaml  mlx_9b_jsonex_guard.yaml  mlx_baseline_500.yaml  mlx_baseline_stable.yaml  paper_experiment_plan.yaml
docs/: GOAL.md  GOAL_PLAN.md  abstract.md  api_reference.md  datasets.md  eval_plan_and_status.md  evaluation.md  hyperparameters.md  master_plan.md  master_plan_review.md  mlx_coordination_rules.md  mlx_metal_oom_root_cause.md  mlx_separation_plan.md  mlx_setup.md  paper_docs_index.md  paper_experiment_plan.md  paper_results_snapshot.md  runbook.md  tg_lora_algorithm_design.md  tg_lora_retrospective_analysis.md
(+689 files in other folders)
