[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-lora"
version = "0.1.0"
description = "TG-LoRA: velocity-based extrapolation for efficient LoRA fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "bitsandbytes>=0.41",
    "accelerate>=0.25",
    "datasets>=2.16",
    "safetensors>=0.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["tg_lora*"]
