[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-lora"
version = "0.1.0"
description = "Tangent-Gradient LoRA: extrapolation-based LoRA training with velocity tracking"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "peft>=0.7",
    "bitsandbytes>=0.41",
    "accelerate>=0.25",
    "datasets>=2.16",
    "safetensors>=0.4",
    "sentencepiece>=0.1",
    "tokenizers>=0.15",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "mlflow>=2.9",
    "pydantic>=2.5",
    "orjson>=3.9",
    "jsonlines>=4.0",
    "tqdm>=4.66",
    "rich>=13.7",
    "rapidfuzz>=3.6",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "hypothesis>=6.0", "ruff>=0.4"]
mlx = ["mlx>=0.21", "mlx-lm[train]>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests", "mlx/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
